--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -27,5 +28,13 @@
         android:text="@string/sign_out_button"
         android:textColor="#ffffff"
         android:onClick="signOut"/>
+
+    <fragment
+        android:id="@+id/fragment2"
+        android:name="com.photoscape.photoscape.CreatePin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        tools:layout="@layout/fragment_create_pin" />
 
 </RelativeLayout>
