--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -29,12 +29,22 @@
         android:textColor="#ffffff"
         android:onClick="signOut"/>
 
-    <fragment
-        android:id="@+id/fragment2"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:name="com.photoscape.photoscape.CreatePin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        tools:layout="@layout/fragment_create_pin" />
+        tools:layout="@layout/fragment_create_pin"/>
+
+    <Button
+        android:id="@+id/NewMarkerbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/signOutButton1"
+        android:layout_marginStart="15dp"
+        android:text="NewMarker"
+        tools:text="New Marker" />
 
 </RelativeLayout>
