--- a/app/src/main/res/layout/fragment_create_pin.xml
+++ b/app/src/main/res/layout/fragment_create_pin.xml
@@ -7,13 +7,13 @@
     android:layout_height="wrap_content"
     android:visibility="visible"
     tools:context=".CreatePin"
-    android:backgroundTint="@color/colorPrimary">
+    android:background="#FFFFFF">
 
     <!-- TODO: Update blank fragment layout -->
 
     <ScrollView
-        android:layout_width="315dp"
-        android:layout_height="487dp"
+        android:layout_width="340dp"
+        android:layout_height="508dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -159,7 +159,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -168,15 +168,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/discardButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="44dp"
                 android:layout_marginEnd="100dp"
                 android:layout_marginStart="8dp"
                 android:text="Discard"
-                app:layout_constraintEnd_toStartOf="@+id/button5"
+                app:layout_constraintEnd_toStartOf="@+id/saveButton"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText4" />
+                app:layout_constraintTop_toBottomOf="@+id/editText4"
+                tools:text="Discard" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
