--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -47,4 +47,13 @@
         android:text="NewMarker"
         tools:text="New Marker" />
 
+    <Button
+        android:id="@+id/importButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/signOutButton1"
+        android:layout_marginEnd="136dp"
+        android:text="Import" />
+
 </RelativeLayout>
