--- a/app/src/main/res/layout/fragment_create_pin.xml
+++ b/app/src/main/res/layout/fragment_create_pin.xml
@@ -33,7 +33,7 @@
             android:backgroundTint="@color/colorPrimary">
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/photoPreview"
                 android:layout_width="280dp"
                 android:layout_height="156dp"
                 android:layout_marginEnd="8dp"
@@ -75,18 +75,18 @@
                 android:layout_marginEnd="184dp"
                 android:layout_marginTop="4dp"
                 android:text="Upload:"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton"
-                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+                app:layout_constraintEnd_toStartOf="@+id/importPhotoButton"
+                app:layout_constraintTop_toBottomOf="@+id/photoPreview" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/importPhotoButton"
                 android:layout_width="40dp"
                 android:layout_height="29dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginTop="4dp"
                 android:src="@android:drawable/ic_menu_upload"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+                app:layout_constraintTop_toBottomOf="@+id/photoPreview" />
 
             <TextView
                 android:id="@+id/textView8"
