--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,14 +37,13 @@
         android:layout_centerInParent="true"
         tools:layout="@layout/fragment_create_pin"/>
 
-    <Button
-        android:id="@+id/NewMarkerbutton"
-        android:layout_width="wrap_content"
+    <fragment
+        android:id="@+id/place_autocomplete"
+        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/signOutButton1"
-        android:layout_marginStart="15dp"
-        android:text="NewMarker"
-        tools:text="New Marker" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp"/>
 
 </RelativeLayout>
