--- a/app/src/main/res/layout/fragment_create_pin.xml
+++ b/app/src/main/res/layout/fragment_create_pin.xml
@@ -44,7 +44,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.333"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/photoTextView"
+                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
 
             <EditText
                 android:id="@+id/editPinName"
