All pin details now stored on RealTime DB

--- a/app/src/main/res/layout/fragment_review_pin.xml
+++ b/app/src/main/res/layout/fragment_review_pin.xml
@@ -68,7 +68,7 @@
             android:id="@+id/textView5"
             android:layout_width="208dp"
             android:layout_height="83dp"
-            android:text="TextView"
+            android:text="Instructions"
             tools:layout_editor_absoluteX="67dp"
             tools:layout_editor_absoluteY="489dp" />
     </android.support.constraint.ConstraintLayout>
