--- a/app/src/main/res/layout/fragment_create_pin.xml
+++ b/app/src/main/res/layout/fragment_create_pin.xml
@@ -102,6 +102,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="Description:"
+                android:maxLines="10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.08"
                 app:layout_constraintStart_toStartOf="parent"
