--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,19 +16,6 @@
     android:layout_height="match_parent"
     tools:context=".MapsActivity" />
 
-    <Button
-        android:id="@+id/signOutButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#359c5e"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:padding="8dp"
-        android:layout_margin="5dp"
-        android:text="@string/sign_out_button"
-        android:textColor="#ffffff"
-        android:onClick="signOut"/>
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:name="com.photoscape.photoscape.CreatePin"
@@ -36,6 +23,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         tools:layout="@layout/fragment_create_pin"/>
+
+    <FrameLayout
+        android:id="@+id/account_fragment"
+        android:name="com.photoscape.photoscape.Account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        tools:layout="@layout/fragment_account"/>
 
     <fragment
         android:id="@+id/place_autocomplete"
@@ -45,5 +40,16 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="24dp"/>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:elevation="0dp"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="#ffffff"
+        app:itemTextColor="#ffffff"
+        app:menu="@menu/bottom_navigation_main" />
 
 </RelativeLayout>
