--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,8 +34,8 @@
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_width="329dp"
+        android:layout_height="46dp"
         android:layout_gravity="top"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
@@ -65,9 +65,10 @@
     <FrameLayout
         android:id="@+id/reviewpin_fragment"
         android:name="com.photoscape.photoscape.ReviewPin"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:elevation="16dp"
         android:layout="@layout/fragment_review_pin">
 
     </FrameLayout>
