--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,10 +14,12 @@
         android:layout_height="223dp">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/accountPhoto"
             android:layout_width="281dp"
-            android:layout_height="139dp"
-            android:src="@android:color/background_dark"
+            android:layout_height="239dp"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:backgroundTint="@color/colorPrimary"
+            android:contentDescription="accountPhoto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,42 +28,44 @@
             android:layout_width="78dp"
             android:layout_height="64dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:adjustViewBounds="false"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/accountPhoto"
             tools:src="@tools:sample/avatars[2]" />
 
         <Button
             android:id="@+id/signOutButton"
+            style="@style/AppTheme"
             android:layout_width="163dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:background="@color/common_google_signin_btn_text_dark_default"
             android:text="Sign Out"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:layout_constraintVertical_bias="0.6" />
+            app:layout_constraintTop_toBottomOf="@+id/emailAddressText" />
 
         <TextView
             android:id="@+id/emailAddressText"
-            android:layout_width="114dp"
-            android:layout_height="22dp"
+            android:layout_width="173dp"
+            android:layout_height="21dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="104dp"
+            android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintBottom_toBottomOf="@+id/accountPhoto"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
