--- a/app/src/main/res/layout/fragment_review_pin.xml
+++ b/app/src/main/res/layout/fragment_review_pin.xml
@@ -18,82 +18,90 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:backgroundTint="@color/colorPrimary">
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/photoPreview"
-                android:layout_width="350dp"
-                android:layout_height="184dp"
+                android:layout_width="356dp"
+                android:layout_height="192dp"
+                android:adjustViewBounds="false"
+                android:scaleType="fitCenter"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.4"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/backgrounds/scenic[11]" />
 
             <TextView
                 android:id="@+id/bestTimeForPhotoTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
                 android:text="Best Time for Photo: "
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/pinNameTextView" />
 
             <TextView
                 android:id="@+id/bestTimeForPhotoAnswerTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:text="Sunset"
-                app:layout_constraintBottom_toTopOf="@+id/instructionsTextView"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.691"
+                app:layout_constraintHorizontal_bias="0.824"
                 app:layout_constraintStart_toEndOf="@+id/bestTimeForPhotoTextView"
-                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
-                app:layout_constraintVertical_bias="0.546" />
+                app:layout_constraintTop_toBottomOf="@+id/photoPreview"
+                app:layout_constraintVertical_bias="0.118" />
 
             <TextView
                 android:id="@+id/descriptionTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_width="273dp"
+                android:layout_height="76dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="8dp"
                 android:text="Description"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.118"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoPreview" />
+                app:layout_constraintTop_toBottomOf="@+id/bestTimeForPhotoTextView"
+                tools:text="Description" />
 
             <TextView
                 android:id="@+id/instructionsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="52dp"
+                android:layout_width="273dp"
+                android:layout_height="76dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Instructions"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.104"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bestTimeForPhotoTextView"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
+                tools:text="Instructions" />
 
             <TextView
                 android:id="@+id/pinNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="PinName"
-                android:textColor="@color/common_google_signin_btn_text_dark_default"
-                app:layout_constraintBottom_toBottomOf="@+id/photoPreview"
-                app:layout_constraintEnd_toEndOf="@+id/photoPreview"
-                app:layout_constraintHorizontal_bias="0.139"
-                app:layout_constraintStart_toStartOf="@+id/photoPreview"
-                app:layout_constraintTop_toTopOf="@+id/photoPreview"
-                app:layout_constraintVertical_bias="0.921" />
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.029"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/photoPreview" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
